samples/_failures_safe/1761595072_d8170d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55e24663.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_55e24663.c:132:14: error: expected ‘)’ at end of input
  132 |     if (stats
      |        ~     ^
      |              )
./samples/SAFE/__tmp_55e24663.c:132:5: error: expected declaration or statement at end of input
  132 |     if (stats
      |     ^~
